--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -40,6 +40,7 @@ jobs:
             .github/workflows/starting-course.yml \
             .github/ISSUE_TEMPLATE/course-template-problem-report.md \
             .github/ISSUE_TEMPLATE/course-template-feature-request.md \
+            .github/PULL_REQUEST_TEMPLATE/add_to_sync_template.md \
             resources/code_output \
             resources/screenshots \
             resources/course_screenshots \
