--- a/_output.yml
+++ b/_output.yml
@@ -2,8 +2,8 @@ bookdown::gitbook:
   css: assets/style.css
   includes:
     before_body: assets/big-image.html
-    after_body: assets/footer.html
-  highlight: tango
+    after_body: [assets/footer.html, assets/open-new-tab.html]
+    highlight: tango
   config:
     toc:
       collapse: section
