--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -83,12 +83,12 @@ jobs:
           git fetch origin
           git add --force docs/*
           git commit -m 'Render bookdown' || echo "No changes to commit"
-          git pull --rebase --allow-unrelated-histories --strategy-option=ours
+          git pull --allow-unrelated-histories --strategy-option=ours
           git push -u origin main  || echo "No changes to push"
 
   render-tocless:
     name: Render TOC-less version for Leanpub or Coursera
-    needs: [yaml-check]
+    needs: [render-bookdown]
     runs-on: ubuntu-latest
     container:
       image: ${{needs.yaml-check.outputs.rendering_docker_image}}
@@ -122,12 +122,12 @@ jobs:
           git fetch origin
           git add --force docs/no_toc*
           git commit -m 'Render toc-less' || echo "No changes to commit"
-          git pull --rebase --allow-unrelated-histories --strategy-option=ours
+          git pull --allow-unrelated-histories --strategy-option=ours
           git push -u origin main  || echo "No changes to push"
 
   render-leanpub:
     name: Finish Leanpub prep
-    needs: [yaml-check, render-tocless]
+    needs: [render-tocless]
     runs-on: ubuntu-latest
     container:
       image: jhudsl/ottrpal:main
@@ -199,12 +199,12 @@ jobs:
           git add --force resources/*
           git add --force docs/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
-          git pull --rebase --allow-unrelated-histories --strategy-option=ours
+          git pull --allow-unrelated-histories --strategy-option=ours
           git push --force --set-upstream origin main || echo "No changes to push"
 
   render-coursera:
     name: Finish Coursera prep
-    needs: [yaml-check, render-tocless]
+    needs: [render-tocless]
     runs-on: ubuntu-latest
     container:
       image: ${{needs.yaml-check.outputs.rendering_docker_image}}
@@ -244,5 +244,5 @@ jobs:
           git add --force resources/*
           git add --force docs/*
           git commit -m 'Render Coursera quizzes' || echo "No changes to commit"
-          git pull --rebase --allow-unrelated-histories --strategy-option=ours
+          git pull --allow-unrelated-histories --strategy-option=ours
           git push -u origin main  || echo "No changes to push"
