--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -88,7 +88,7 @@ jobs:
 
   render-tocless:
     name: Render TOC-less version for Leanpub or Coursera
-    needs: [render-bookdown]
+    needs: [yaml-check, render-bookdown]
     runs-on: ubuntu-latest
     container:
       image: ${{needs.yaml-check.outputs.rendering_docker_image}}
