--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -40,6 +40,8 @@ jobs:
             .github/workflows/starting-course.yml \
             .github/ISSUE_TEMPLATE/course-template-problem-report.md \
             .github/ISSUE_TEMPLATE/course-template-feature-request.md \
+            .github/ISSUE_TEMPLATE/new-course-add-to-sync.md \
+            .github/ISSUE_TEMPLATE/update-course-info-for-sync.md \
             .github/PULL_REQUEST_TEMPLATE/add_to_sync_template.md \
             resources/code_output \
             resources/screenshots \
