--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -83,7 +83,7 @@ jobs:
           git fetch origin
           git add --force docs/*
           git commit -m 'Render bookdown' || echo "No changes to commit"
-          git pull --rebase --allow-unrelated-histories --strategy-option=ours
+          git pull --allow-unrelated-histories --strategy-option=ours
           git push -u origin main  || echo "No changes to push"
 
   render-tocless:
@@ -122,12 +122,12 @@ jobs:
           git fetch origin
           git add --force docs/no_toc*
           git commit -m 'Render toc-less' || echo "No changes to commit"
-          git pull --rebase --allow-unrelated-histories --strategy-option=ours
+          git pull --allow-unrelated-histories --strategy-option=ours
           git push -u origin main  || echo "No changes to push"
 
   render-leanpub:
     name: Finish Leanpub prep
-    needs: [render-tocless]
+    needs: [yaml-check, render-tocless]
     runs-on: ubuntu-latest
     container:
       image: jhudsl/ottrpal:main
@@ -173,7 +173,7 @@ jobs:
           git push -u origin main || echo "No changes to push"
 
       - name: Run ottrpal::bookdown_to_embed_leanpub
-        if: needs.yaml-check.outputs.toggle_quiz_check == 'no'
+        if: ${{ needs.yaml-check.outputs.toggle_quiz_check == 'no'}}
         run: |
           Rscript -e "ottrpal::bookdown_to_embed_leanpub(
             render = FALSE, \
@@ -182,7 +182,7 @@ jobs:
             quiz_dir = NULL)"
 
       - name: Run ottrpal::bookdown_to_embed_leanpub
-        if: needs.yaml-check.outputs.toggle_quiz_check == 'yes'
+        if: ${{ needs.yaml-check.outputs.toggle_quiz_check == 'yes'}}
         run: |
           Rscript -e "ottrpal::bookdown_to_embed_leanpub(
             render = FALSE, \
@@ -204,7 +204,7 @@ jobs:
 
   render-coursera:
     name: Finish Coursera prep
-    needs: [render-tocless]
+    needs: [yaml-check, render-tocless]
     runs-on: ubuntu-latest
     container:
       image: ${{needs.yaml-check.outputs.rendering_docker_image}}
