--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -58,7 +58,7 @@ group:
       griffithlab/pVACtools_Intro_Course
       griffithlab/CIVIC_SVI_Course
       PracticalGenomics/cogaps-on-sciserver
-      fhdsl/AI_for_software
+      fhdsl/AI_for_Efficient_Programming
       fhdsl/AI_for_Decision_Makers
       griffithlab/Immuno_Workflow_Course
       fhdsl/S1_Intro_to_R
