--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -83,7 +83,7 @@ jobs:
           git fetch origin
           git add --force docs/*
           git commit -m 'Render bookdown' || echo "No changes to commit"
-          git pull --allow-unrelated-histories --strategy-option=ours
+          git pull --set-upstream origin --allow-unrelated-histories --strategy-option=ours
           git push -u origin main  || echo "No changes to push"
 
   render-tocless:
@@ -122,7 +122,7 @@ jobs:
           git fetch origin
           git add --force docs/no_toc*
           git commit -m 'Render toc-less' || echo "No changes to commit"
-          git pull --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
+          git pull --set-upstream origin --allow-unrelated-histories --strategy-option=ours
           git push -u origin main  || echo "No changes to push"
 
   render-leanpub:
