--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -70,6 +70,8 @@ group:
       williamtmillsiv/introduction_to_bioinformatics
       fhdsl/bench_to_bytes
       fhdsl/Intermediate_R
+      fhdsl/DataViz_Practice
+      fhdsl/DataViz_Considerations
 ###ADD NEW REPO HERE following the format above#
 
 ### These are custom groups for syncing -- not all files needs to be synced
