--- a/config_automation.yml
+++ b/config_automation.yml
@@ -27,4 +27,4 @@ make-book-txt: TRUE
 
 # What docker image should be used for rendering?
 # The default is jhudsl/base_ottr:main
-rendering-docker-image: 'jhudsl/base_ottr:main'
+rendering-docker-image: 'jhudsl/base_ottr'
