Make GHA yml's compatible with quarto (#746)
* Update render-all.yml

* add if statement

* Update config_automation.yml

* Add quarto rendering

* Update pull request.yml

* Add fhdsl/ottr to sync.yml

* Update with the changes on fhdsl/ottr

* Fix styler part 3

* Updates to git handling

* Some rebases and some rearrangements of git stuffs

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -68,6 +68,7 @@ group:
       fhdsl/Intermediate-Git-GitHub
       fhdsl/GitHub_Automation_for_Scientists
       williamtmillsiv/introduction_to_bioinformatics
+      fhdsl/OTTR_Quarto
       fhdsl/bench_to_bytes
       fhdsl/Intermediate_R
       fhdsl/DataViz_Practice
@@ -148,7 +149,7 @@ group:
       deleteOrphaned: true
     repos: |
       C-MOOR/C-MOOR_Template
-      
+
   - files:
     - source: config_automation.yml
       dest: config_automation.yml
