--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -76,6 +76,7 @@ group:
       fhdsl/DataViz_Practice
       fhdsl/DataViz_Considerations
       fhdsl/Intro_to_Python
+      fhdsl/Containers_for_Scientists
 ###ADD NEW REPO HERE following the format above#
 
 ### These are custom groups for syncing -- not all files needs to be synced
