--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -8,7 +8,8 @@ on:
   push:
     branches: [ main, staging ]
     paths:
-      - '**md$'
+      - '*.qmd'
+      - '*.Rmd'
       - assets/*
       - quizzes/*
 
