--- a/config_automation.yml
+++ b/config_automation.yml
@@ -12,6 +12,8 @@ spell-check: yes
 style-code: yes
 # Would you like your markdown files to be checked for formatting
 markdown-linter: yes
+# Would you like a readability report on your markdowns?
+readability-report: yes
 # Test build the docker image if any docker-relevant files have been changed
 docker-test: no
 # Should URLs be tested periodically?
