--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -130,7 +130,10 @@ jobs:
 
       - uses: DavidAnson/markdownlint-cli2-action@v19
         with:
-          globs: '**/*.md'
+          globs: |
+            *.Rmd
+            *.md
+            *.qmd
 
 ############################# Readability Report ###################################
 
